# optimazedinner

./: pyproject.toml  test.py  test1.py
data/: all_data.csv  all_data7.csv  all_data8.csv  processed_data.csv
