[tool.poetry]
name = "optimazedinner"
version = "0.1.0"
description = ""
authors = ["Hayashikotarou <s1922028@stu.musashino-u.ac.jp>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
pandas = "^1.3.4"
numpy = "^1.21.4"
streamlit = "^1.2.0"
scipy = "^1.7.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
